cortex icon & scrollbar fixes

--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,13 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap');
+
 body {
   text-align: center;
   height: 100%;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
 
@@ -27,11 +28,30 @@ body {
   /* user-select: none; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
   color: var(--textColor);
-  scrollbar-width: none; /* Removes scrollbars even on firefox */
+  scrollbar-width: thin;
 }
 
 *:focus {
   outline: none;
+}
+
+/* Scrollbars */
+::-webkit-scrollbar {
+  width: 3px !important;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.5);
+  border-radius: 15px;
+  border: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(155, 155, 155, 0.8);
 }
 
 p {
@@ -47,7 +67,7 @@ p {
   z-index: 3;
 }
 
-.badge > p {
+.badge>p {
   margin: 0px;
   color: var(--textColor);
 }
@@ -435,7 +455,8 @@ p {
   height: auto;
   width: 100%;
   max-width: 300px;
-  max-height: 230px;;
+  max-height: 230px;
+  ;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
   margin-top: 10px;
@@ -700,18 +721,22 @@ p {
 /* Responsive */
 
 @media (min-width: 800px) {
+
   /* .mainContainer {
     scale: 1.2 !important;
   } */
   .item-biography {
     grid-area: 7 / 10 / span 2 / span 2;
   }
+
   .item-projects {
     grid-area: 6 / 3 / 8 / 5;
   }
+
   .item-version {
     grid-area: 6 / 10 / span 1 / span 1;
   }
+
   .item-animation {
     grid-area: 10 / 7 / span 1 / span 1;
   }
